--- a/umbra/CMakeLists.txt
+++ b/umbra/CMakeLists.txt
@@ -71,10 +71,14 @@ set_property(TARGET umbra PROPERTY COMPILE_DEFINITIONS ${DEFINES_NO_D})
 # log/assert/notify infrastructure.
 add_library(umbra_int STATIC ${srcs})
 configure_DynamoRIO_client(umbra_int)
-use_DynamoRIO_extension(umbra_int drmgr)
+use_DynamoRIO_extension(umbra_int drmgr_static)
 use_DynamoRIO_extension(umbra_int drcontainers)
 if (DEBUG_BUILD)
-  use_DynamoRIO_extension(umbra_int drsyms)
+  if (STATIC_DRSYMS)
+    use_DynamoRIO_extension(umbra_int drsyms_static)
+  else ()
+    use_DynamoRIO_extension(umbra_int drsyms)
+  endif ()
 endif (DEBUG_BUILD)
 if (UNIX)
   append_property_string(TARGET umbra_int COMPILE_FLAGS "-fPIC")
