--- a/umbra/CMakeLists.txt
+++ b/umbra/CMakeLists.txt
@@ -1,5 +1,5 @@
 # **********************************************************
-# Copyright (c) 2013 Google, Inc.  All rights reserved.
+# Copyright (c) 2014 Google, Inc.  All rights reserved.
 # **********************************************************
 
 # Dr. Memory: the memory debugger
@@ -23,16 +23,6 @@ cmake_minimum_required(VERSION 2.8.10)
 
 set_output_dirs(${framework_bindir})
 
-# Since the license is LGPL, must be SHARED and not STATIC by default.
-# SHARED is also required if multiple separate components all want to
-# use this same extension.
-option(DR_EXT_UMBRA_STATIC "create umbra as a static, not shared, library (N.B.: ensure the LGPL license implications are acceptable for your tool, as well as ensuring no separately-linked components of your tool also use umbra, before enabling as a static library)")
-if (DR_EXT_UMBRA_STATIC)
-  set(libtype STATIC)
-else()
-  set(libtype SHARED)
-endif ()
-
 set(srcs
   umbra.c
   ../framework/version.c
@@ -46,26 +36,60 @@ else (X64)
   set (srcs ${srcs} umbra_x86.c)
 endif (X64)
 
+macro(configure_umbra_target target)
+  if (UNIX)
+    # Avoid relocations which tend to violate security policies
+    append_property_string(TARGET ${target} COMPILE_FLAGS "-fPIC")
+  endif (UNIX)
+  # We do not prevent duplicate builds of the same files as that would require
+  # building a static library that is then linked with drmf_utils.c to
+  # create a final static library, for DR_EXT_UMBRA_STATIC: and that's
+  # a pain to export w/ the proper link rules.  But we at least use the
+  # same flags and avoid compiling the same file differently.
+  set_property(TARGET ${target} PROPERTY COMPILE_DEFINITIONS ${DEFINES_NO_D})
+  target_link_libraries(${target} ${ntimp_lib})
+endmacro(configure_umbra_target)
+
+macro(export_umbra_target target drmgr)
+  # We need to clear the dependents that come from DR to avoid the prefix
+  # from affecting them too.
+  set_target_properties(${target} PROPERTIES LINK_INTERFACE_LIBRARIES "")
+  # We use a prefix primarily to make it easy to test the imported targets,
+  # and to give a better "bundled extensions" feel.
+  export_target(${target} NAMESPACE drmf_)
+  # Now put in our imports w/o the namespace on them
+  set_target_properties(${target} PROPERTIES
+    LINK_INTERFACE_LIBRARIES "dynamorio;${drmgr};drcontainers")
+  install(TARGETS ${target} EXPORT ${exported_targets_name}
+    DESTINATION ${DRMF_INSTALL_BIN})
+  # Top-level installs .debug and .pdb files
+endmacro(export_umbra_target)
+
 # For the exported version, we don't want to print to stderr or raise
 # msgboxes, so we link in globals to suppress notification in drmf_utils.c.
-add_library(umbra ${libtype} ${srcs} ../framework/drmf_utils.c)
+add_library(umbra SHARED ${srcs} ../framework/drmf_utils.c)
 # Set a preferred base to avoid conflict if we can
 set(PREFERRED_BASE 0x78000000)
 configure_DynamoRIO_client(umbra)
 use_DynamoRIO_extension(umbra drmgr)
 use_DynamoRIO_extension(umbra drcontainers)
-if (UNIX)
-  # Avoid relocations which tend to violate security policies
-  append_property_string(TARGET umbra COMPILE_FLAGS "-fPIC")
-endif (UNIX)
 set_target_properties(umbra PROPERTIES
   VERSION ${DRMF_VERSION})
-# We do not prevent duplicate builds of the same files as that would require
-# building a static library that is then linked with drmf_utils.c to
-# create a final static library, for DR_EXT_UMBRA_STATIC: and that's
-# a pain to export w/ the proper link rules.  But we at least use the
-# same flags and avoid compiling the same file differently.
-set_property(TARGET umbra PROPERTY COMPILE_DEFINITIONS ${DEFINES_NO_D})
+configure_umbra_target(umbra)
+export_umbra_target(umbra "drmgr")
+install(FILES umbra.h DESTINATION ${DRMF_INSTALL_INC})
+
+# Since the license is LGPL, SHARED and not STATIC by default.
+# SHARED is also required if multiple separate components all want to
+# use this same extension.
+# But, we also provide a static version with a different name for those
+# who want it, in the style of DR's side-by-side static extensions.
+add_library(umbra_static STATIC ${srcs} ../framework/drmf_utils.c)
+configure_DynamoRIO_client(umbra_static)
+use_DynamoRIO_extension(umbra_static drmgr_static)
+use_DynamoRIO_extension(umbra_static drcontainers)
+configure_umbra_target(umbra_static)
+export_umbra_target(umbra_static "drmgr_static")
 
 # We build a separate static target for internal use that has our
 # log/assert/notify infrastructure.
@@ -80,23 +104,6 @@ if (DEBUG_BUILD)
     use_DynamoRIO_extension(umbra_int drsyms)
   endif ()
 endif (DEBUG_BUILD)
-if (UNIX)
-  append_property_string(TARGET umbra_int COMPILE_FLAGS "-fPIC")
-endif (UNIX)
-set_property(TARGET umbra_int PROPERTY COMPILE_DEFINITIONS ${DEFINES_NO_D})
+configure_umbra_target(umbra_int)
 
 # Documentation is handled as part of the main tool docs processing.
-
-# We need to clear the dependents that come from DR to avoid the prefix
-# from affecting them too.
-set_target_properties(umbra PROPERTIES
-  LINK_INTERFACE_LIBRARIES "")
-# We use a prefix primarly to make it easy to test the imported targets,
-# and to give a better "bundled extensions" feel.
-export_target(umbra NAMESPACE drmf_)
-# Now put in our imports w/o the namespace on them
-set_target_properties(umbra PROPERTIES
-  LINK_INTERFACE_LIBRARIES "dynamorio;drmgr;drcontainers")
-install(TARGETS umbra EXPORT ${exported_targets_name} DESTINATION ${DRMF_INSTALL_BIN})
-install(FILES umbra.h DESTINATION ${DRMF_INSTALL_INC})
-# Top-level installs .debug and .pdb files
