Turn off DynamoRIO_USE_LIBC for drsyscall, umbra, and drstrace, to shrink their footprints and reduce dependences.  Xref DRi#714.
SVN-Revision: 1682

--- a/drstrace/CMakeLists.txt
+++ b/drstrace/CMakeLists.txt
@@ -25,6 +25,11 @@ find_package(DrMemoryFramework PATHS ${framework_dir})
 ##################################################
 # drstracelib
 
+# We do not need libc, and we avoid a 10x size increase in both our
+# dll and pdb (plus we avoid stressing private library isolation) by
+# not using it (i#714).
+set(DynamoRIO_USE_LIBC OFF)
+
 add_library(drstracelib SHARED drstrace.c)
 
 # We share the framework version # for now
@@ -66,17 +71,9 @@ install(FILES ${drsys_path} DESTINATION "${INSTALL_LIB}"
 ##################################################
 # drstrace frontend
 
-# Restore global flags
-foreach (config "" ${CMAKE_BUILD_TYPE} ${CMAKE_CONFIGURATION_TYPES})
-  if ("${config}" STREQUAL "")
-    set(config_upper "")
-  else ("${config}" STREQUAL "")
-    string(TOUPPER "_${config}" config_upper)
-  endif ("${config}" STREQUAL "")
-  foreach (var CMAKE_C_FLAGS${config_upper};CMAKE_CXX_FLAGS${config_upper})
-    set(${var} "${SAVE_${var}}")
-  endforeach (var)
-endforeach (config)
+# We don't restore global flags (from each ${SAVE_${var}}) b/c cmake
+# waits until the end of the file to take the global values into
+# effect.  We don't seem to need them for the front-end though.
 
 add_executable(drstrace drstrace_frontend.c)
 configure_DynamoRIO_standalone(drstrace)
