--- a/umbra/CMakeLists.txt
+++ b/umbra/CMakeLists.txt
@@ -21,6 +21,11 @@
 # UMBRA: the shadow memory framework
 cmake_minimum_required(VERSION 2.8.10)
 
+# We do not need libc, and we avoid a 10x size increase in both our
+# dll and pdb (plus we avoid stressing private library isolation) by
+# not using it (i#714).
+set(DynamoRIO_USE_LIBC OFF)
+
 set_output_dirs(${framework_bindir})
 
 set(srcs
