--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -955,6 +955,9 @@ endif (WIN32)
 set(DynamoRIO_SET_PREFERRED_BASE ON)
 set(PREFERRED_BASE 0x73800000)
 
+# we can handle being tied to a particular DR version (we already are)
+set(DynamoRIO_FAST_IR ON)
+
 set(DynamoRIO_REG_COMPATIBILITY ON)
 if (NOT STATIC_DRSYMS)
   set(DynamoRIO_USE_LIBC OFF)
