i#1440 MacOS DrSyscall: initial setup
Adds preliminary MacOS support via drsyscall_macos.c, with arg access in
place but missing the full syscall table, and syscall_macos.c.  Does not
yet add API changes for syscall success and 64-bit args/return values.

SVN-Revision: 1708

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -926,7 +926,11 @@ else (TOOL_DR_HEAPSTAT)
     common/redblack.c
     common/crypto.c)
   if (UNIX)
-    set(srcs ${srcs} drmemory/syscall_linux.c)
+    if (APPLE)
+      set(srcs ${srcs} drmemory/syscall_macos.c)
+    else (APPLE)
+      set(srcs ${srcs} drmemory/syscall_linux.c)
+    endif (APPLE)
   else (UNIX)
     set(srcs ${srcs} drmemory/syscall_windows.c)
     set(srcs ${srcs} drmemory/syscall_wingdi.c)
