i#1438 MacOS: build test suite on Mac
Get the tests building on Mac.  Disabled a couple that are Linux-specific,
dealt with a range of Mac-versus-Linux issues, fixed a number of clang
warnings, handled sigaltstack differences, SIGBUS b/c of __PAGEZERO, etc.

SVN-Revision: 1713

--- a/tests/app_suite/CMakeLists.txt
+++ b/tests/app_suite/CMakeLists.txt
@@ -48,6 +48,8 @@ add_executable(app_suite_tests
 if (UNIX)
   if (APPLE)
     append_compile_flags(app_suite_tests "-DMACOS -DUNIX")
+    # Avoid gtest-internal warnings
+    append_compile_flags(app_suite_tests "-Wno-unused-private-field")
   else (APPLE)
     append_compile_flags(app_suite_tests "-DLINUX -DUNIX")
   endif (APPLE)
