i#1448 MacOS: add Mac default suppression file support.
Add initial suppression, for i#243: a copy through xmm.

SVN-Revision: 1725

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1315,7 +1315,11 @@ if (WIN32)
   set(defsupp_in "${CMAKE_CURRENT_SOURCE_DIR}/drmemory/suppress-default.win.txt")
   configure_file("${defsupp_in}" "${defsupp_out}" COPYONLY)
 else (WIN32)
-  set(defsupp_in "${CMAKE_CURRENT_SOURCE_DIR}/drmemory/suppress-default.lin.txt")
+  if (APPLE)
+    set(defsupp_in "${CMAKE_CURRENT_SOURCE_DIR}/drmemory/suppress-default.mac.txt")
+  else (APPLE)
+    set(defsupp_in "${CMAKE_CURRENT_SOURCE_DIR}/drmemory/suppress-default.lin.txt")
+  endif (APPLE)
   file(READ "${defsupp_in}" txt)
   file(WRITE "${defsupp_out}" "${txt}")
 endif (WIN32)
